--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "axios": "^1.8.4",
     "daisyui": "^5.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.4.1",
     "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
